[fix] code clean - Generic primitive warning